@@ -220,8 +220,8 @@ exportMethods(
 	"FLStocks",
   "gear",
   "gear<-",
-  "grad",
-  "grad<-",
+  "gr",
+  "gr<-",
 	"harvest",
 	"harvest<-",
 	"harvest.spwn",
@@ -296,6 +296,7 @@ exportMethods(
 	"nls",
 	"params",
 	"params<-",
+  "parscale",
 	"plot",
 	"predict",
 	"price",
