@@ -26,6 +26,7 @@ USER-VISIBLE CHANGES
   - autoParscale method for FLModel returns values for using in the parscale option
     of optim. Parameter estimation is then carried out on params/parscale which
     improves convergence.
+  - parscale method for FLModel.
 
 BUG FIXES
   - FS#2 - FLCohort breaks for a single age quant.
